[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.6", features = ["csr", "nightly"] }
leptos_router = "0.5"
thaw = "0.1.8"
leptos_oidc = "0.3"
